--- a/src/main/webapp/WEB-INF/templates/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/user/list.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" th:href="@{/static/images/favicon.ico}"/>
     <title>shoulder</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/bootstrap.min.css}">
@@ -46,16 +47,22 @@
                         <div class="x_content">
                             <table id="datatable" class="table table-striped table-bordered">
                                 <thead>
-                                <tr>
-                                    <th>序号</th>
-                                    <th>用户名</th>
-                                    <th>邮箱</th>
-                                    <th>电话</th>
-                                    <th>创建时间</th>
-                                </tr>
+                                    <tr>
+                                        <th>序号</th>
+                                        <th>用户名</th>
+                                        <th>邮箱</th>
+                                        <th>电话</th>
+                                        <th>创建时间</th>
+                                    </tr>
                                 </thead>
                                 <tbody>
-
+                                    <tr th:each="user:${users}">
+                                        <td th:text="${user.id}"></td>
+                                        <td th:text="${user.username}"></td>
+                                        <td th:text="${user.email}"></td>
+                                        <td th:text="${user.telephone}"></td>
+                                        <td th:text="${user.createTime}"></td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
