--- a/src/main/webapp/WEB-INF/templates/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/user/list.html
@@ -41,28 +41,36 @@
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="x_panel">
                         <div class="x_title">
-                            <h2>用户列表</h2>
+                            <h2>用户信息</h2>
+                            <ul class="nav navbar-right panel_toolbox">
+                                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
+                            </ul>
                             <div class="clearfix"></div>
                         </div>
                         <div class="x_content">
-                            <table id="datatable" class="table table-striped table-bordered">
+                            <table class="table table-hover">
                                 <thead>
-                                    <tr>
-                                        <th>序号</th>
-                                        <th>用户名</th>
-                                        <th>邮箱</th>
-                                        <th>电话</th>
-                                        <th>创建时间</th>
-                                    </tr>
+                                <tr>
+                                    <th>序号</th>
+                                    <th>用户名</th>
+                                    <th>邮箱</th>
+                                    <th>电话</th>
+                                    <th>创建时间</th>
+                                    <th>操作</th>
+                                </tr>
                                 </thead>
                                 <tbody>
-                                    <tr th:each="user:${users}">
-                                        <td th:text="${user.id}"></td>
-                                        <td th:text="${user.username}"></td>
-                                        <td th:text="${user.email}"></td>
-                                        <td th:text="${user.telephone}"></td>
-                                        <td th:text="${user.createTime}"></td>
-                                    </tr>
+                                <tr th:each="user,iterStat:${users}">
+                                    <td th:text="${iterStat.count}"></td>
+                                    <td th:text="${user.username}"></td>
+                                    <td th:text="${user.email}"></td>
+                                    <td th:text="${user.telephone}"></td>
+                                    <td th:text="${user.createTime}"></td>
+                                    <td>
+                                        <button type="button" class="btn btn-round btn-info btn-xs" th:onclick="'javascript: editUser('+${user.id}+')' ">编辑</button>
+                                        <button type="button" class="btn btn-round btn-danger btn-xs" th:onclick="'javascript: deleteUser(\''+${user.username}+'\')' ">删除</button>
+                                    </td>
+                                </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -104,6 +112,6 @@
 <script type="text/javascript" th:src="@{/static/js/vfs_fonts.js}"></script>
 <!-- Custom Theme Scripts -->
 <script type="text/javascript" th:src="@{/static/js/custom.min.js}"></script>
-
+<script type="text/javascript" th:src="@{/static/js/user/user-edit.js}"></script>
 </body>
 </html>
