--- a/src/main/webapp/WEB-INF/templates/common/index.html
+++ b/src/main/webapp/WEB-INF/templates/common/index.html
@@ -9,15 +9,15 @@
     <link rel="icon" th:href="@{/static/images/favicon.ico}"/>
     <title>shoulder</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/bootstrap.min.css}">
     <!-- Font Awesome -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/font-awesome.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/font-awesome.min.css}">
     <!-- NProgress -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/nprogress.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/nprogress.css}">
     <!-- iCheck -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/jquery.mCustomScrollbar.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/jquery.mCustomScrollbar.min.css}">
     <!-- Custom Theme Style -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/custom.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/custom.min.css}">
 </head>
 
 <body class="nav-md footer_fixed">
@@ -49,16 +49,16 @@
     </div>
 </div>
 <!-- jQuery -->
-<script type="text/javascript" th:src="@{/static/js/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/jquery.min.js}"></script>
 <!-- Bootstrap -->
-<script type="text/javascript" th:src="@{/static/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/bootstrap.min.js}"></script>
 <!-- FastClick -->
-<script type="text/javascript" th:src="@{/static/js/fastclick.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/fastclick.js}"></script>
 <!-- NProgress -->
-<script type="text/javascript" th:src="@{/static/js/nprogress.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/nprogress.js}"></script>
 <!-- jQuery custom content scroller -->
-<script type="text/javascript" th:src="@{/static/js/jquery.mCustomScrollbar.concat.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/jquery.mCustomScrollbar.concat.min.js}"></script>
 <!-- Custom Theme Scripts -->
-<script type="text/javascript" th:src="@{/static/js/custom.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/custom.min.js}"></script>
 </body>
 </html>
