--- a/src/main/webapp/WEB-INF/templates/user/edit.html
+++ b/src/main/webapp/WEB-INF/templates/user/edit.html
@@ -9,15 +9,24 @@
     <link rel="icon" th:href="@{/static/images/favicon.ico}"/>
     <title>shoulder</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/bootstrap.min.css}">
     <!-- Font Awesome -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/font-awesome.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/font-awesome.min.css}">
     <!-- NProgress -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/nprogress.css}">
-    <!-- Custom Theme Style -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/custom.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/nprogress.css}">
+    <!--Green-->
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/green.css}">
+    <!-- bootstrap-datetimepicker css -->
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datepicker/bootstrap-datetimepicker.min.css}">
     <!-- jQuery -->
-    <script type="text/javascript" th:src="@{/static/js/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/js/common/jquery.min.js}"></script>
+    <!-- Bootstrap -->
+    <script type="text/javascript" th:src="@{/static/js/common/bootstrap.min.js}"></script>
+    <!-- bootstrap-datetimepicker js -->
+    <script type="text/javascript" th:src="@{/static/js/datepicker/bootstrap-datetimepicker.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/js/datepicker/bootstrap-datetimepicker.zh-CN.js}" charset="UTF-8"></script>
+    <!-- Custom Theme Style -->
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/custom.min.css}">
     <!-- EditJs -->
     <script type="text/javascript" th:src="@{/static/js/user/user-edit.js}"></script>
 </head>
@@ -47,33 +56,72 @@
                                 <div class="clearfix"></div>
                             </div>
                             <div class="x_content">
-                                <form class="form-horizontal form-label-left" th:attr="action=@{/user/save.do}" novalidate>
+                                <form class="form-horizontal form-label-left" th:attr="action=@{/user/save.do}"
+                                      novalidate>
                                     <input type="hidden" id="userId" name="id" th:value="${user.id}">
                                     <div class="item form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">用户名 <span class="required">*</span>
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">用户名<span
+                                                class="required">*</span>
                                         </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" id="name" class="form-control col-md-7 col-xs-12" name="username" placeholder="Smith" required="required" th:value="${user.username}">
+                                            <input type="text" id="name" class="form-control col-md-7 col-xs-12"
+                                                   name="username" placeholder="Smith" required="required"
+                                                   th:value="${user.username}">
                                         </div>
                                     </div>
                                     <div class="item form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="email">邮箱 <span class="required">*</span>
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="email">邮箱<span
+                                                class="required">*</span>
                                         </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="email" id="email" name="email" class="form-control col-md-7 col-xs-12" placeholder="Smith@163.com" required="required"  th:value="${user.email}">
+                                            <input type="email" id="email" name="email"
+                                                   class="form-control col-md-7 col-xs-12" placeholder="Smith@163.com"
+                                                   required="required" th:value="${user.email}">
                                         </div>
                                     </div>
                                     <div class="item form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="telephone">联系方式<span class="required">*</span>
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12">性别<span class="required">*</span></label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <div id="gender" class="btn-group" data-toggle="buttons">
+                                                <span>男</span>
+                                                <input type="radio" class="flat" name="gender" value="male"
+                                                       th:checked="${user.gender == 'male' ? true : false}"/>
+                                                &nbsp;&nbsp;
+                                                <span>女</span>
+                                                <input type="radio" class="flat" name="gender" value="female"
+                                                       th:checked="${user.gender == 'female' ? true : false}"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item form-group">
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12"
+                                               for="telephone">联系方式<span class="required">*</span>
                                         </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="tel" id="telephone" name="telephone" class="form-control col-md-7 col-xs-12" data-validate-length-range="11,12" placeholder="18236887931" required="required" th:value="${user.telephone}">
+                                            <input type="tel" id="telephone" name="telephone"
+                                                   class="form-control col-md-7 col-xs-12"
+                                                   data-validate-length-range="11,12" placeholder="18236887931"
+                                                   required="required" th:value="${user.telephone}">
+                                        </div>
+                                    </div>
+                                    <div class="item form-group">
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12"
+                                               for="myDatepicker">创建时间<span class="required">*</span>
+                                        </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <div class="input-group date" id="myDatepicker">
+                                                <span class="input-group-addon">
+                                                    <span class="glyphicon glyphicon-calendar"></span>
+                                                </span>
+                                                <input type="text" class="form-control col-md-7 col-xs-12" name="createTime" th:value="${user.createTime}"/>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="ln_solid"></div>
                                     <div class="form-group" style="text-align: center">
                                         <div class="col-md-6 col-md-offset-3">
-                                            <a class="btn btn-primary" type="button" href="javascript:history.go(-1)">返回</a>
+                                            <a class="btn btn-primary" type="button"
+                                               href="javascript:history.go(-1)">返回</a>
                                             <button class="btn btn-info" type="reset">重置</button>
                                             <button type="submit" class="btn btn-success">保存</button>
                                         </div>
@@ -93,14 +141,14 @@
     </div>
 </div>
 <!-- jQuery Validate-->
-<script type="text/javascript" th:src="@{/static/js/validator.js}"></script>
-<!-- Bootstrap -->
-<script type="text/javascript" th:src="@{/static/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/validator.js}"></script>
 <!-- FastClick -->
-<script type="text/javascript" th:src="@{/static/js/fastclick.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/fastclick.js}"></script>
 <!-- NProgress -->
-<script type="text/javascript" th:src="@{/static/js/nprogress.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/nprogress.js}"></script>
+<!--iCheck-->
+<script type="text/javascript" th:src="@{/static/js/common/icheck.min.js}"></script>
 <!-- Custom Theme Scripts -->
-<script type="text/javascript" th:src="@{/static/js/custom.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/custom.min.js}"></script>
 </body>
 </html>
