--- a/src/main/webapp/WEB-INF/templates/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/user/list.html
@@ -9,11 +9,11 @@
     <link rel="icon" th:href="@{/static/images/favicon.ico}"/>
     <title>shoulder</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/bootstrap.min.css}">
     <!-- Font Awesome -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/font-awesome.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/font-awesome.min.css}">
     <!-- NProgress -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/nprogress.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/nprogress.css}">
     <!-- Datatables -->
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/dataTables.bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/buttons.bootstrap.min.css}">
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/responsive.bootstrap.min.css}">
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/datatables/scroller.bootstrap.min.css}">
     <!-- Custom Theme Style -->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/custom.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/custom.min.css}">
 </head>
 
 <body class="nav-md">
@@ -54,6 +54,7 @@
                                     <th>序号</th>
                                     <th>用户名</th>
                                     <th>邮箱</th>
+                                    <th>性别</th>
                                     <th>电话</th>
                                     <th>创建时间</th>
                                     <th>操作</th>
@@ -64,6 +65,7 @@
                                     <td th:text="${iterStat.count}"></td>
                                     <td th:text="${user.username}"></td>
                                     <td th:text="${user.email}"></td>
+                                    <td th:text="${user.gender == 'male'}? '男' : '女'"></td>
                                     <td th:text="${user.telephone}"></td>
                                     <td th:text="${user.createTime}"></td>
                                     <td>
@@ -87,14 +89,14 @@
 </div>
 
 <!-- jQuery -->
-<script type="text/javascript" th:src="@{/static/js/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/jquery.min.js}"></script>
 <!-- Bootstrap -->
-<script type="text/javascript" th:src="@{/static/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/bootstrap.min.js}"></script>
 <!-- FastClick -->
-<script type="text/javascript" th:src="@{/static/js/fastclick.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/fastclick.js}"></script>
 <!-- NProgress -->
-<script type="text/javascript" th:src="@{/static/js/nprogress.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/nprogress.js}"></script>
 <!-- Custom Theme Scripts -->
-<script type="text/javascript" th:src="@{/static/js/custom.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/js/common/custom.min.js}"></script>
 </body>
 </html>
