--- a/src/main/webapp/static/css/common/green.css
+++ b/src/main/webapp/static/css/common/green.css
@@ -9,7 +9,7 @@
     padding: 0;
     width: 20px;
     height: 20px;
-    background: url(../images/green.png) no-repeat;
+    background: url(../../images/green.png) no-repeat;
     border: none;
     cursor: pointer;
 }
@@ -46,7 +46,7 @@
 @media (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
     .icheckbox_flat-green,
     .iradio_flat-green {
-        background-image: url(../images/green@2x.png);
+        background-image: url(../../images/green@2x.png);
         -webkit-background-size: 176px 22px;
         background-size: 176px 22px;
     }
