--- a/src/main/webapp/WEB-INF/templates/common/login.html
+++ b/src/main/webapp/WEB-INF/templates/common/login.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
-<html lang="cn">
+<html lang="cn" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Meta, title, CSS, favicons, etc. -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="static/images/favicon.ico"/>
+    <link rel="icon" th:href="@{/static/images/favicon.ico}"/>
     <title>shoulder</title>
-
     <!-- Bootstrap -->
-    <link href="static/css/common/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/bootstrap.min.css}">
     <!-- Font Awesome -->
-    <link href="static/css/common/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/font-awesome.min.css}">
     <!-- NProgress -->
-    <link href="static/css/common/nprogress.css" rel="stylesheet">
-    <!-- Animate.css -->
-    <link href="static/css/common/animate.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/nprogress.css}">
+    <!-- iCheck -->
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/animate.min.css}">
     <!-- Custom Theme Style -->
-    <link href="static/css/common/custom.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/static/css/common/custom.min.css}">
   </head>
 
   <body class="login">
@@ -30,16 +28,16 @@
       <div class="login_wrapper">
         <div class="animate form login_form">
           <section class="login_content">
-            <form>
+            <form th:action="@{/loginValidate.do}">
               <h1>欢迎来到Shoulder</h1>
               <div>
-                <input type="text" class="form-control" placeholder="用户名" required="" />
+                <input type="text" name="username" class="form-control" placeholder="用户名" required="" />
               </div>
               <div>
-                <input type="password" class="form-control" placeholder="密码" required="" />
+                <input type="password" name="password" class="form-control" placeholder="密码" required="" />
               </div>
               <div>
-                <a class="btn btn-default submit" href="login.do">Log in</a>
+                <button class="btn btn-default submit">Log in</button>
                 <a class="reset_pass" href="#">Lost your password?</a>
               </div>
 
