--- a/src/main/webapp/WEB-INF/templates/common/login.html
+++ b/src/main/webapp/WEB-INF/templates/common/login.html
@@ -35,6 +35,7 @@
               </div>
               <div>
                 <input type="password" name="password" class="form-control" placeholder="密码" required="" />
+                <span th:text="${error}"></span>
               </div>
               <div>
                 <button class="btn btn-default submit">Log in</button>
