--- a/src/main/webapp/WEB-INF/templates/common/navigation.html
+++ b/src/main/webapp/WEB-INF/templates/common/navigation.html
@@ -27,7 +27,7 @@
                             </a>
                         </li>
                         <li><a href="javascript:">Help</a></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                        <li><a th:href="@{/logout.do}"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                     </ul>
                 </li>
 
