--- a/src/main/webapp/WEB-INF/templates/error/page-error.html
+++ b/src/main/webapp/WEB-INF/templates/error/page-error.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gentelella Alela! | </title>
+    <title>shoulder</title>
 
     <!-- Bootstrap -->
     <link th:href="@{/static/css/common/bootstrap.min.css}" rel="stylesheet">
