--- a/src/main/webapp/WEB-INF/templates/error/unauthorized.html
+++ b/src/main/webapp/WEB-INF/templates/error/unauthorized.html
@@ -1,66 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <!-- Meta, title, CSS, favicons, etc. -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="cn" xmlns:th="http://www.thymeleaf.org">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <!-- Meta, title, CSS, favicons, etc. -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gentelella Alela! | </title>
+  <title>shoulder</title>
+  <!-- Bootstrap -->
+  <link th:href="@{/static/css/common/bootstrap.min.css}" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link th:href="@{/static/css/common/font-awesome.min.css}" rel="stylesheet">
+  <!-- NProgress -->
+  <link th:href="@{/static/css/common/nprogress.css}" rel="stylesheet">
+  <!-- Custom Theme Style -->
+  <link th:href="@{/static/css/common/custom.min.css}" rel="stylesheet">
+</head>
 
-    <!-- Bootstrap -->
-    <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <!-- NProgress -->
-    <link href="../vendors/nprogress/nprogress.css" rel="stylesheet">
-
-    <!-- Custom Theme Style -->
-    <link href="../build/css/custom.min.css" rel="stylesheet">
-  </head>
-
-  <body class="nav-md">
-    <div class="container body">
-      <div class="main_container">
-        <!-- page content -->
-        <div class="col-md-12">
-          <div class="col-middle">
-            <div class="text-center text-center">
-              <h1 class="error-number">403</h1>
-              <h2>Access denied</h2>
-              <p>Full authentication is required to access this resource. <a href="#">Report this?</a>
-              </p>
-              <div class="mid_center">
-                <h3>Search</h3>
-                <form>
-                  <div class="col-xs-12 form-group pull-right top_search">
-                    <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Search for...">
-                      <span class="input-group-btn">
-                              <button class="btn btn-default" type="button">Go!</button>
-                          </span>
-                    </div>
-                  </div>
-                </form>
-              </div>
+<body class="nav-md">
+<div class="container body">
+  <div class="main_container">
+    <!-- page content -->
+    <div class="col-md-12">
+      <div class="col-middle">
+        <div class="text-center text-center">
+          <h1 class="error-number">Unauthorized</h1>
+          <h2>Sorry but we couldn't find this page</h2>
+          <p></p>
+          <div class="col-md-6 col-md-offset-3">
+            <div class="alert alert-warning alert-dismissible fade in" role="alert">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                      aria-hidden="true">×</span>
+              </button>
+              <span th:text="${#session.getAttribute('error')}"></span>
+              <a href="#">Report this?</a>
             </div>
           </div>
         </div>
-        <!-- /page content -->
       </div>
     </div>
+    <!-- /page content -->
+  </div>
+</div>
 
-    <!-- jQuery -->
-    <script src="../vendors/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap -->
-    <script src="../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- FastClick -->
-    <script src="../vendors/fastclick/lib/fastclick.js"></script>
-    <!-- NProgress -->
-    <script src="../vendors/nprogress/nprogress.js"></script>
-
-    <!-- Custom Theme Scripts -->
-    <script src="../build/js/custom.min.js"></script>
-  </body>
+<!-- jQuery -->
+<script type="text/javascript" th:src="@{/static/js/common/jquery.min.js}"></script>
+<!-- Bootstrap -->
+<script type="text/javascript" th:src="@{/static/js/common/bootstrap.min.js}"></script>
+<!-- FastClick -->
+<script type="text/javascript" th:src="@{/static/js/common/fastclick.js}"></script>
+<!-- NProgress -->
+<script type="text/javascript" th:src="@{/static/js/common/nprogress.js}"></script>
+<!-- Custom Theme Scripts -->
+<script type="text/javascript" th:src="@{/static/js/common/custom.min.js}"></script>
+</body>
 </html>
