--- a/src/main/webapp/WEB-INF/templates/user/edit.html
+++ b/src/main/webapp/WEB-INF/templates/user/edit.html
@@ -56,7 +56,7 @@
                                 <div class="clearfix"></div>
                             </div>
                             <div class="x_content">
-                                <form class="form-horizontal form-label-left" th:attr="action=@{/user/save.do}"
+                                <form class="form-horizontal form-label-left" th:attr="action=@{/user/updateUser.do}"
                                       novalidate>
                                     <input type="hidden" id="userId" name="id" th:value="${user.id}">
                                     <div class="item form-group">
@@ -102,6 +102,34 @@
                                                    class="form-control col-md-7 col-xs-12"
                                                    data-validate-length-range="11,12" placeholder="18236887931"
                                                    required="required" th:value="${user.telephone}">
+                                        </div>
+                                    </div>
+                                    <div class="item form-group">
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12"
+                                               for="telephone">部门<span class="required">*</span>
+                                        </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <select class="form-control">
+                                                <option>Choose option</option>
+                                                <option>Option one</option>
+                                                <option>Option two</option>
+                                                <option>Option three</option>
+                                                <option>Option four</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="item form-group">
+                                        <label class="control-label col-md-3 col-sm-3 col-xs-12"
+                                               for="telephone">角色<span class="required">*</span>
+                                        </label>
+                                        <div class="col-md-6 col-sm-6 col-xs-12">
+                                            <select class="form-control">
+                                                <option>Choose option</option>
+                                                <option>Option one</option>
+                                                <option>Option two</option>
+                                                <option>Option three</option>
+                                                <option>Option four</option>
+                                            </select>
                                         </div>
                                     </div>
                                     <div class="item form-group">
