--- a/src/main/webapp/WEB-INF/templates/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/user/list.html
@@ -56,6 +56,8 @@
                                     <th>邮箱</th>
                                     <th>性别</th>
                                     <th>电话</th>
+                                    <th>部门</th>
+                                    <th>角色</th>
                                     <th>创建时间</th>
                                     <th>操作</th>
                                 </tr>
@@ -67,9 +69,11 @@
                                     <td th:text="${user.email}"></td>
                                     <td th:text="${user.gender == 'male'}? '男' : '女'"></td>
                                     <td th:text="${user.telephone}"></td>
+                                    <td th:text="${user.deptName}"></td>
+                                    <td th:text="${user.roleName}"></td>
                                     <td th:text="${user.createTime}"></td>
                                     <td>
-                                        <a type="button" class="btn btn-round btn-info btn-xs" th:href="@{/user/toEdit.do(id=${user.id})}">编辑</a>
+                                        <a type="button" class="btn btn-round btn-info btn-xs" th:href="@{/user/toUpdateUser.do(id=${user.id})}">编辑</a>
                                         <button type="button" class="btn btn-round btn-danger btn-xs">删除</button>
                                     </td>
                                 </tr>
