角色下拉、角色、部门页面

--- a/src/main/webapp/WEB-INF/templates/common/menu.html
+++ b/src/main/webapp/WEB-INF/templates/common/menu.html
@@ -38,7 +38,7 @@
                     <li><a><i class="fa fa-cog"></i> 系统管理 <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
                             <li><a href="form.html">菜单管理</a></li>
-                            <li><a href="form_advanced.html">角色管理</a></li>
+                            <li><a th:href="@{/role/index.do}">角色管理</a></li>
                             <li><a href="form_validation.html">授权管理</a></li>
                             <li><a th:href="@{/user/index.do}">用户管理</a></li>
                         </ul>
