--- a/src/main/webapp/WEB-INF/templates/role/list.html
+++ b/src/main/webapp/WEB-INF/templates/role/list.html
@@ -37,27 +37,11 @@
 
         <!-- page content -->
         <div class="right_col" role="main">
-            <div class="page-title">
-                <div class="title_left">
-                    <h3>用户信息</h3>
-                </div>
-                <div class="title_right">
-                    <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search for...">
-                            <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">Go!</button>
-                        </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        <div class="clearfix"></div>
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="x_panel">
-                        <button type="button" class="btn btn-round btn-success" style="float: left;margin-right: 5%;">新增</button>
                         <div class="x_title">
+                            <h2>角色信息</h2>
                             <ul class="nav navbar-right panel_toolbox">
                                 <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
                             </ul>
@@ -68,28 +52,18 @@
                                 <thead>
                                 <tr>
                                     <th>序号</th>
-                                    <th>用户名</th>
-                                    <th>邮箱</th>
-                                    <th>性别</th>
-                                    <th>电话</th>
-                                    <th>部门</th>
-                                    <th>角色</th>
-                                    <th>创建时间</th>
+                                    <th>角色名</th>
+                                    <th>描述</th>
                                     <th>操作</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr th:each="user,iterStat:${users}">
+                                <tr th:each="role,iterStat:${roles}">
                                     <td th:text="${iterStat.count}"></td>
-                                    <td th:text="${user.username}"></td>
-                                    <td th:text="${user.email}"></td>
-                                    <td th:text="${user.gender == 'male'}? '男' : '女'"></td>
-                                    <td th:text="${user.telephone}"></td>
-                                    <td th:text="${user.deptName}"></td>
-                                    <td th:text="${user.roleName}"></td>
-                                    <td th:text="${user.createTime}"></td>
+                                    <td th:text="${role.name}"></td>
+                                    <td th:text="${role.desc}"></td>
                                     <td>
-                                        <a type="button" class="btn btn-round btn-info btn-xs" th:href="@{/user/toUpdateUser.do(id=${user.id})}">编辑</a>
+                                        <a type="button" class="btn btn-round btn-info btn-xs" th:href="@{/user/toUpdateRole.do(id=${role.id})}">编辑</a>
                                         <button type="button" class="btn btn-round btn-danger btn-xs">删除</button>
                                     </td>
                                 </tr>
