修改实体类及sql

--- a/src/main/webapp/WEB-INF/templates/user/edit.html
+++ b/src/main/webapp/WEB-INF/templates/user/edit.html
@@ -149,9 +149,9 @@
                                     <div class="form-group" style="text-align: center">
                                         <div class="col-md-6 col-md-offset-3">
                                             <a class="btn btn-primary" type="button"
-                                               href="javascript:history.go(-1)">返回</a>
-                                            <button class="btn btn-info" type="reset">重置</button>
-                                            <button type="submit" class="btn btn-success">保存</button>
+                                               href="javascript:history.go(-1)"><i class="fa fa-step-backward"> 返回</i></a>
+                                            <button class="btn btn-dark" type="reset"><i class="fa fa-undo"> 重置</i></button>
+                                            <button type="submit" class="btn btn-success"><i class="fa fa-save"> 保存</i></button>
                                         </div>
                                     </div>
                                 </form>
