--- a/src/main/webapp/WEB-INF/templates/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/user/list.html
@@ -56,45 +56,47 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="x_panel">
-                        <button type="button" class="btn btn-round btn-success" style="float: left;margin-right: 5%;">新增</button>
                         <div class="x_title">
+                            <button type="button" class="btn btn-info btn-sm"><i class="fa fa-plus"></i> 新增</button>
                             <ul class="nav navbar-right panel_toolbox">
                                 <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a></li>
                             </ul>
                             <div class="clearfix"></div>
                         </div>
                         <div class="x_content">
-                            <table class="table table-hover">
-                                <thead>
-                                <tr>
-                                    <th>序号</th>
-                                    <th>用户名</th>
-                                    <th>邮箱</th>
-                                    <th>性别</th>
-                                    <th>电话</th>
-                                    <th>部门</th>
-                                    <th>角色</th>
-                                    <th>创建时间</th>
-                                    <th>操作</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr th:each="user,iterStat:${users}">
-                                    <td th:text="${iterStat.count}"></td>
-                                    <td th:text="${user.username}"></td>
-                                    <td th:text="${user.email}"></td>
-                                    <td th:text="${user.gender == 'male'}? '男' : '女'"></td>
-                                    <td th:text="${user.telephone}"></td>
-                                    <td th:text="${user.deptName}"></td>
-                                    <td th:text="${user.roleName}"></td>
-                                    <td th:text="${user.createTime}"></td>
-                                    <td>
-                                        <a type="button" class="btn btn-round btn-info btn-xs" th:href="@{/user/toUpdateUser.do(id=${user.id})}">编辑</a>
-                                        <button type="button" class="btn btn-round btn-danger btn-xs">删除</button>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
+                            <div class="table-responsive">
+                                <table class="table table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>序号</th>
+                                        <th>用户名</th>
+                                        <th>邮箱</th>
+                                        <th>性别</th>
+                                        <th>电话</th>
+                                        <th>部门</th>
+                                        <th>角色</th>
+                                        <th>创建时间</th>
+                                        <th>操作</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="user,iterStat:${users}">
+                                        <td th:text="${iterStat.count}"></td>
+                                        <td th:text="${user.username}"></td>
+                                        <td th:text="${user.email}"></td>
+                                        <td th:text="${user.gender == 'male'}? '男' : '女'"></td>
+                                        <td th:text="${user.telephone}"></td>
+                                        <td th:text="${user.dept.name}"></td>
+                                        <td th:text="${user.role.name}"></td>
+                                        <td th:text="${user.createTime}"></td>
+                                        <td>
+                                            <a type="button" class="btn btn-success btn-xs" th:href="@{/user/toUpdateUser.do(id=${user.id})}"><i class="fa fa-edit"></i></a>
+                                            <button type="button" class="btn btn-dark btn-xs"><i class="fa fa-trash"></i></button>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -118,5 +120,14 @@
 <script type="text/javascript" th:src="@{/static/js/common/nprogress.js}"></script>
 <!-- Custom Theme Scripts -->
 <script type="text/javascript" th:src="@{/static/js/common/custom.min.js}"></script>
+<script type="text/javascript" th:inline="javascript">
+    function formatValue(value) {
+        if(value) {
+            console.log("不空")
+        }else{
+            console.log("空");
+        }
+    }
+</script>
 </body>
 </html>
