修改userMapper.xml,增加排序

--- a/src/main/webapp/WEB-INF/templates/user/index.html
+++ b/src/main/webapp/WEB-INF/templates/user/index.html
@@ -133,9 +133,10 @@
         var template = Handlebars.compile(operateRow);
         var table = $('#userTable').DataTable({
             "processing": true, //刷新的对话框
+            "destroy": true,
             "paging": true, //开启分页
             "lengthMenu": [ [10, 20, 30],['10','20','30'] ],//自定义分页长度
-            "order": [ [5, "desc"] ],
+            "order": [ [5, "desc"] ],//默认排序
             "searching": false,
             "serverSide": true,
             "ajax":function(data,callback,settings) {
@@ -143,7 +144,7 @@
                 var param = {};
                 //删除多余请求参数
                 for (var key in data) {
-                    if (key.indexOf("search") == 0) { //以columns开头的参数删除
+                    if (key.indexOf("search") == 0) { //以search开头的参数删除
                         delete data[key];
                     }
                 };
@@ -151,7 +152,7 @@
                 param.limit = data.length;//页面显示记录条数，在页面显示每页显示多少项的时候
                 param.start = data.start;//开始的记录序号
                 //多排序条件
-                param.order = ",";
+                param.order = " ";
                 if(data.order) {
                     $.each(data.order,function(index,value){
                         var col = data.order[index].column;
@@ -160,7 +161,7 @@
                             if(name) {
                                 if(col ==  window.parseInt(i)) {
                                     var arr = name.split("_");
-                                    param.order += arr[1] + "," + data.order[index].dir + ",";
+                                    param.order += arr[1] + " " + data.order[index].dir + ",";
                                 }
                             }
                         })
@@ -260,7 +261,7 @@
 
             ],
             /*sPaginationType: 'ellipses'*/
-        });
+        }).api();
     });
 
 
